# AIR-WS23-Group06

./: .gitignore  README.md  pyproject.toml
air/: main.py  ui.py
air/data/: load.py  word2vec_document_vectors.npy
air/data/checkpoints/: Review Preprocessing.ipc
air/data/models/: xgboost.json  xgboost_full.json  xgboost_full.pkl
air/evaluation/: evaluation.py
air/models/: bert_test.py  bert_train.py  helpfullness.py  recommender_system.py
air/notebooks/: evaluate_recommender.py  recommender_system.py  word2vec_training.py  xgboost.py  xgboost_training.py  xgboost_training_full.py
air/processing/: model_predictions.py  preprocessing.py  processor.py
docs/: data-flow.drawio
