[tool.poetry]
name = "air"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
polars = "^0.19.15"
nltk = "^3.8.1"
scikit-learn = "^1.3.2"
xgboost = "^2.0.3"
seaborn = "^0.13.1"
streamlit = "^1.29.0"
transformers = "^4.36.2"
torch = "^2.1.2"
gensim = "^4.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
